--- a/lilac-app/public/index.html
+++ b/lilac-app/public/index.html
@@ -5,18 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/flower.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/flower.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/flower.png" />
         <link rel="manifest" href="/site.webmanifest" />
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="mask-icon" href="/flower.png" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
 
         <link rel="preconnect" href="https://fonts.gstatic.com"> 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
         <script src="./typingdna.js"></script>
 
-        <title>LandRules</title>
+        <title>Lilac</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
