seach? kinda idk

--- a/lilac-app/public/index.html
+++ b/lilac-app/public/index.html
@@ -12,9 +12,11 @@
         <link rel="mask-icon" href="/flower.png" color="#5bbad5" />
         <meta name="msapplication-TileColor" content="#da532c" />
 
-        <link rel="preconnect" href="https://fonts.gstatic.com"> 
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-        <script src="./typingdna.js"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
 
         <title>Lilac</title>
     </head>
